--- a/Interfaces/cs.lproj/RSSFeed.strings
+++ b/Interfaces/cs.lproj/RSSFeed.strings
@@ -1,35 +1,39 @@
-/* NSButton (Cancel) : <title:Cancel> (oid:54) */
-"Cancel" = "Zrušit";
 
-/* NSTextField (Create a new subscription ) : <title:Create a new subscription
-> (oid:64) */
-"Create a new subscription\n" = "Vytvořit nové odebírání";
+/* Class = "NSWindow"; title = "Zdroj RSS"; ObjectID = "6"; */
+"6.title" = "Zdroj RSS";
 
-/* NSTextField (Edit subscription) : <title:Edit subscription> (oid:67) */
-"Edit subscription" = "Upravit odebírání";
+/* Class = "NSMenuItem"; title = "URL"; ObjectID = "45"; */
+"45.title" = "URL";
 
-/* NSTextField (Enter the link for the news feed below. Or choose from the Source list to enter a shortcut name for the news feed provided by the source.) : <title:Enter the link for the news feed below. Or choose from the Source list to enter a shortcut name for the news feed provided by the source.> (oid:65) */
-"Enter the link for the news feed below. Or choose from the Source list to enter a shortcut name for the news feed provided by the source." = "Níže zadejte adresu novinek, které chcete odebírat, nebo vyberte ze seznamu zdroj novinek a zadejte jméno uživatele dané služby.";
+/* Class = "NSWindow"; title = "Zdroj RSS"; ObjectID = "49"; */
+"49.title" = "Zdroj RSS";
 
-/* NSMenu : <title:OtherViews> (oid:44) */
-"OtherViews" = "OtherViews";
+/* Class = "NSButtonCell"; title = "Zrušit"; ObjectID = "102"; */
+"102.title" = "Zrušit";
 
-/* NSPanel (RSS Feed) : <title:RSS Feed> (oid:49) */
-"RSS Feed" = "Zdroj RSS";
+/* Class = "NSButtonCell"; title = "Odebírat"; ObjectID = "103"; */
+"103.title" = "Odebírat";
 
-/* NSButton (Save) : <title:Save> (oid:53) */
-"Save" = "Uložit";
+/* Class = "NSTextFieldCell"; title = "Zdroj:"; ObjectID = "104"; */
+"104.title" = "Zdroj:";
 
-/* NSTextField (Source: ) : <title:Source:
-> (oid:40) */
-"Source:\n" = "Zdroj:";
+/* Class = "NSTextFieldCell"; title = "Vytvořit nové odebírání"; ObjectID = "106"; */
+"106.title" = "Vytvořit nové odebírání";
 
-/* NSButton (Subscribe) : <title:Subscribe> (oid:10) */
-"Subscribe" = "Odebírat";
+/* Class = "NSTextFieldCell"; title = "Níže zadejte adresu novinek, které chcete odebírat, nebo vyberte ze seznamu zdroj novinek a zadejte jméno uživatele dané služby."; ObjectID = "107"; */
+"107.title" = "Níže zadejte adresu novinek, které chcete odebírat, nebo vyberte ze seznamu zdroj novinek a zadejte jméno uživatele dané služby.";
 
-/* NSMenuItem : <title:URL> (oid:45) */
-"URL" = "URL";
+/* Class = "NSTextFieldCell"; title = "URL:"; ObjectID = "110"; */
+"110.title" = "URL:";
 
-/* NSTextField (URL:) : <title:URL:> (oid:97) */
-"URL:" = "URL:";
+/* Class = "NSButtonCell"; title = "Uložit"; ObjectID = "111"; */
+"111.title" = "Uložit";
 
+/* Class = "NSButtonCell"; title = "Zrušit"; ObjectID = "112"; */
+"112.title" = "Zrušit";
+
+/* Class = "NSTextFieldCell"; title = "Upravit odebírání"; ObjectID = "114"; */
+"114.title" = "Upravit odebírání";
+
+/* Class = "NSButtonCell"; title = "Subscribe in Open Reader"; ObjectID = "116"; */
+"116.title" = "Subscribe in Open Reader";
