--- a/Interfaces/es.lproj/RSSFeed.strings
+++ b/Interfaces/es.lproj/RSSFeed.strings
@@ -1,35 +1,39 @@
-/* NSButton (Cancel) : <title:Cancel> (oid:54) */
-"Cancel" = "Cancelar";
 
-/* NSTextField (Create a new subscription ) : <title:Create a new subscription
-> (oid:64) */
-"Create a new subscription\n" = "Crear nueva suscripción ";
+/* Class = "NSWindow"; title = "Fuente RSS"; ObjectID = "6"; */
+"6.title" = "Fuente RSS";
 
-/* NSTextField (Edit subscription) : <title:Edit subscription> (oid:67) */
-"Edit subscription" = "Editar suscripción:";
+/* Class = "NSMenuItem"; title = "URL"; ObjectID = "45"; */
+"45.title" = "URL";
 
-/* NSTextField (Enter the link for the news feed below. Or choose from the Source list to enter a shortcut name for the news feed provided by the source.) : <title:Enter the link for the news feed below. Or choose from the Source list to enter a shortcut name for the news feed provided by the source.> (oid:65) */
-"Enter the link for the news feed below. Or choose from the Source list to enter a shortcut name for the news feed provided by the source." = "Introduzca el enlace de la fuente de noticias a continuación, o elija de la lista de fuentes para introducir el acceso directo proporcionado por la fuente de noticias.";
+/* Class = "NSWindow"; title = "Fuente RSS"; ObjectID = "49"; */
+"49.title" = "Fuente RSS";
 
-/* NSMenu : <title:OtherViews> (oid:44) */
-"OtherViews" = "OtherViews";
+/* Class = "NSButtonCell"; title = "Cancelar"; ObjectID = "102"; */
+"102.title" = "Cancelar";
 
-/* NSPanel (RSS Feed) : <title:RSS Feed> (oid:49) */
-"RSS Feed" = "Fuente RSS";
+/* Class = "NSButtonCell"; title = "Suscribirse"; ObjectID = "103"; */
+"103.title" = "Suscribirse";
 
-/* NSButton (Save) : <title:Save> (oid:53) */
-"Save" = "Guardar";
+/* Class = "NSTextFieldCell"; title = "Fuente:"; ObjectID = "104"; */
+"104.title" = "Fuente:";
 
-/* NSTextField (Source: ) : <title:Source:
-> (oid:40) */
-"Source:\n" = "Fuente:\n";
+/* Class = "NSTextFieldCell"; title = "Crear nueva suscripción "; ObjectID = "106"; */
+"106.title" = "Crear nueva suscripción ";
 
-/* NSButton (Subscribe) : <title:Subscribe> (oid:10) */
-"Subscribe" = "Suscribirse";
+/* Class = "NSTextFieldCell"; title = "Introduzca el enlace de la fuente de noticias a continuación, o elija de la lista de fuentes para introducir el acceso directo proporcionado por la fuente de noticias."; ObjectID = "107"; */
+"107.title" = "Introduzca el enlace de la fuente de noticias a continuación, o elija de la lista de fuentes para introducir el acceso directo proporcionado por la fuente de noticias.";
 
-/* NSMenuItem : <title:URL> (oid:45) */
-"URL" = "URL";
+/* Class = "NSTextFieldCell"; title = "URL:"; ObjectID = "110"; */
+"110.title" = "URL:";
 
-/* NSTextField (URL:) : <title:URL:> (oid:97) */
-"URL:" = "URL:";
+/* Class = "NSButtonCell"; title = "Guardar"; ObjectID = "111"; */
+"111.title" = "Guardar";
 
+/* Class = "NSButtonCell"; title = "Cancelar"; ObjectID = "112"; */
+"112.title" = "Cancelar";
+
+/* Class = "NSTextFieldCell"; title = "Editar suscripción:"; ObjectID = "114"; */
+"114.title" = "Editar suscripción:";
+
+/* Class = "NSButtonCell"; title = "Suscribirse a Open Reader"; ObjectID = "116"; */
+"116.title" = "Suscribirse a Open Reader";
