--- a/Interfaces/pt-BR.lproj/RSSFeed.strings
+++ b/Interfaces/pt-BR.lproj/RSSFeed.strings
@@ -1,35 +1,39 @@
-/* NSButton (Cancel) : <title:Cancel> (oid:54) */
-"Cancel" = "Cancelar";
 
-/* NSTextField (Create a new subscription ) : <title:Create a new subscription
-> (oid:64) */
-"Create a new subscription\n" = "Criar nova assinatura\n";
+/* Class = "NSWindow"; title = "RSS"; ObjectID = "6"; */
+"6.title" = "RSS";
 
-/* NSTextField (Edit subscription) : <title:Edit subscription> (oid:67) */
-"Edit subscription" = "Editar assinatura";
+/* Class = "NSMenuItem"; title = "URL"; ObjectID = "45"; */
+"45.title" = "URL";
 
-/* NSTextField (Enter the link for the news feed below. Or choose from the Source list to enter a shortcut name for the news feed provided by the source.) : <title:Enter the link for the news feed below. Or choose from the Source list to enter a shortcut name for the news feed provided by the source.> (oid:65) */
-"Enter the link for the news feed below. Or choose from the Source list to enter a shortcut name for the news feed provided by the source." = "Entre o link das notícias abaixo. Ou escolha da lista de de Origens para entrar com um atalho para as notícias fornecidas pela origem.";
+/* Class = "NSWindow"; title = "RSS"; ObjectID = "49"; */
+"49.title" = "RSS";
 
-/* NSMenu : <title:OtherViews> (oid:44) */
-"OtherViews" = "OtherViews";
+/* Class = "NSButtonCell"; title = "Cancelar"; ObjectID = "102"; */
+"102.title" = "Cancelar";
 
-/* NSPanel (RSS Feed) : <title:RSS Feed> (oid:49) */
-"RSS Feed" = "RSS";
+/* Class = "NSButtonCell"; title = "Assinar"; ObjectID = "103"; */
+"103.title" = "Assinar";
 
-/* NSButton (Save) : <title:Save> (oid:53) */
-"Save" = "Salvar";
+/* Class = "NSTextFieldCell"; title = "Origem:"; ObjectID = "104"; */
+"104.title" = "Origem:";
 
-/* NSTextField (Source: ) : <title:Source:
-> (oid:40) */
-"Source:\n" = "Origem:\n";
+/* Class = "NSTextFieldCell"; title = "Criar nova assinatura"; ObjectID = "106"; */
+"106.title" = "Criar nova assinatura";
 
-/* NSButton (Subscribe) : <title:Subscribe> (oid:10) */
-"Subscribe" = "Assinar";
+/* Class = "NSTextFieldCell"; title = "Entre o link das notícias abaixo. Ou escolha da lista de de Origens para entrar com um atalho para as notícias fornecidas pela origem."; ObjectID = "107"; */
+"107.title" = "Entre o link das notícias abaixo. Ou escolha da lista de de Origens para entrar com um atalho para as notícias fornecidas pela origem.";
 
-/* NSMenuItem : <title:URL> (oid:45) */
-"URL" = "URL";
+/* Class = "NSTextFieldCell"; title = "URL:"; ObjectID = "110"; */
+"110.title" = "URL:";
 
-/* NSTextField (URL:) : <title:URL:> (oid:97) */
-"URL:" = "URL:";
+/* Class = "NSButtonCell"; title = "Salvar"; ObjectID = "111"; */
+"111.title" = "Salvar";
 
+/* Class = "NSButtonCell"; title = "Cancelar"; ObjectID = "112"; */
+"112.title" = "Cancelar";
+
+/* Class = "NSTextFieldCell"; title = "Editar assinatura"; ObjectID = "114"; */
+"114.title" = "Editar assinatura";
+
+/* Class = "NSButtonCell"; title = "Subscribe in Open Reader"; ObjectID = "116"; */
+"116.title" = "Subscribe in Open Reader";
