--- a/Interfaces/pt.lproj/RSSFeed.strings
+++ b/Interfaces/pt.lproj/RSSFeed.strings
@@ -1,35 +1,39 @@
-/* NSButton (Cancel) : <title:Cancel> (oid:54) */
-"Cancel" = "Cancelar";
 
-/* NSTextField (Create a new subscription ) : <title:Create a new subscription
-> (oid:64) */
-"Create a new subscription\n" = "Criar uma nova subscrição\n";
+/* Class = "NSWindow"; title = "Fonte RSS"; ObjectID = "6"; */
+"6.title" = "Fonte RSS";
 
-/* NSTextField (Edit subscription) : <title:Edit subscription> (oid:67) */
-"Edit subscription" = "Editar subscrição";
+/* Class = "NSMenuItem"; title = "URL"; ObjectID = "45"; */
+"45.title" = "URL";
 
-/* NSTextField (Enter the link for the news feed below. Or choose from the Source list to enter a shortcut name for the news feed provided by the source.) : <title:Enter the link for the news feed below. Or choose from the Source list to enter a shortcut name for the news feed provided by the source.> (oid:65) */
-"Enter the link for the news feed below. Or choose from the Source list to enter a shortcut name for the news feed provided by the source." = "Introduza o link para a nova fonte em baixo. Ou escolha na lista de Origens e intriduza um atalho para a fontes disponibilizadas pela origem.";
+/* Class = "NSWindow"; title = "Fonte RSS"; ObjectID = "49"; */
+"49.title" = "Fonte RSS";
 
-/* NSMenu : <title:OtherViews> (oid:44) */
-"OtherViews" = "OtherViews";
+/* Class = "NSButtonCell"; title = "Cancelar"; ObjectID = "102"; */
+"102.title" = "Cancelar";
 
-/* NSPanel (RSS Feed) : <title:RSS Feed> (oid:49) */
-"RSS Feed" = "Fonte RSS";
+/* Class = "NSButtonCell"; title = "Subscrever"; ObjectID = "103"; */
+"103.title" = "Subscrever";
 
-/* NSButton (Save) : <title:Save> (oid:53) */
-"Save" = "Guardar";
+/* Class = "NSTextFieldCell"; title = "Origem:"; ObjectID = "104"; */
+"104.title" = "Origem:";
 
-/* NSTextField (Source: ) : <title:Source:
-> (oid:40) */
-"Source:\n" = "Origem:\n";
+/* Class = "NSTextFieldCell"; title = "Criar uma nova subscrição"; ObjectID = "106"; */
+"106.title" = "Criar uma nova subscrição";
 
-/* NSButton (Subscribe) : <title:Subscribe> (oid:10) */
-"Subscribe" = "Subscrever";
+/* Class = "NSTextFieldCell"; title = "Introduza o link para a nova fonte em baixo. Ou escolha na lista de Origens e intriduza um atalho para a fontes disponibilizadas pela origem."; ObjectID = "107"; */
+"107.title" = "Introduza o link para a nova fonte em baixo. Ou escolha na lista de Origens e intriduza um atalho para a fontes disponibilizadas pela origem.";
 
-/* NSMenuItem : <title:URL> (oid:45) */
-"URL" = "URL";
+/* Class = "NSTextFieldCell"; title = "URL:"; ObjectID = "110"; */
+"110.title" = "URL:";
 
-/* NSTextField (URL:) : <title:URL:> (oid:97) */
-"URL:" = "URL:";
+/* Class = "NSButtonCell"; title = "Guardar"; ObjectID = "111"; */
+"111.title" = "Guardar";
 
+/* Class = "NSButtonCell"; title = "Cancelar"; ObjectID = "112"; */
+"112.title" = "Cancelar";
+
+/* Class = "NSTextFieldCell"; title = "Editar subscrição"; ObjectID = "114"; */
+"114.title" = "Editar subscrição";
+
+/* Class = "NSButtonCell"; title = "Subscribe in Open Reader"; ObjectID = "116"; */
+"116.title" = "Subscribe in Open Reader";
