--- a/Interfaces/uk.lproj/RSSFeed.strings
+++ b/Interfaces/uk.lproj/RSSFeed.strings
@@ -1,35 +1,39 @@
-/* NSButton (Cancel) : <title:Cancel> (oid:54) */
-"Cancel" = "Скасувати";
 
-/* NSTextField (Create a new subscription ) : <title:Create a new subscription
-> (oid:64) */
-"Create a new subscription\n" = "Створити нову підписку\n";
+/* Class = "NSWindow"; title = "RSS-стрічка"; ObjectID = "6"; */
+"6.title" = "RSS-стрічка";
 
-/* NSTextField (Edit subscription) : <title:Edit subscription> (oid:67) */
-"Edit subscription" = "Редагування підписки";
+/* Class = "NSMenuItem"; title = "URL"; ObjectID = "45"; */
+"45.title" = "URL";
 
-/* NSTextField (Enter the link for the news feed below. Or choose from the Source list to enter a shortcut name for the news feed provided by the source.) : <title:Enter the link for the news feed below. Or choose from the Source list to enter a shortcut name for the news feed provided by the source.> (oid:65) */
-"Enter the link for the news feed below. Or choose from the Source list to enter a shortcut name for the news feed provided by the source." = "Введіть адресу стрічки новин, або виберіть стрічку зі списку Джерело для того, щоб додати стрічку з заданого джерела.";
+/* Class = "NSWindow"; title = "RSS-стрічка"; ObjectID = "49"; */
+"49.title" = "RSS-стрічка";
 
-/* NSMenu : <title:OtherViews> (oid:44) */
-"OtherViews" = "OtherViews";
+/* Class = "NSButtonCell"; title = "Скасувати"; ObjectID = "102"; */
+"102.title" = "Скасувати";
 
-/* NSPanel (RSS Feed) : <title:RSS Feed> (oid:49) */
-"RSS Feed" = "RSS-стрічка";
+/* Class = "NSButtonCell"; title = "Підписатися"; ObjectID = "103"; */
+"103.title" = "Підписатися";
 
-/* NSButton (Save) : <title:Save> (oid:53) */
-"Save" = "Зберегти";
+/* Class = "NSTextFieldCell"; title = "Джерело:"; ObjectID = "104"; */
+"104.title" = "Джерело:";
 
-/* NSTextField (Source: ) : <title:Source:
-> (oid:40) */
-"Source:\n" = "Джерело:\n";
+/* Class = "NSTextFieldCell"; title = "Створити нову підписку"; ObjectID = "106"; */
+"106.title" = "Створити нову підписку";
 
-/* NSButton (Subscribe) : <title:Subscribe> (oid:10) */
-"Subscribe" = "Підписатися";
+/* Class = "NSTextFieldCell"; title = "Введіть адресу стрічки новин, або виберіть стрічку зі списку Джерело для того, щоб додати стрічку з заданого джерела."; ObjectID = "107"; */
+"107.title" = "Введіть адресу стрічки новин, або виберіть стрічку зі списку Джерело для того, щоб додати стрічку з заданого джерела.";
 
-/* NSMenuItem : <title:URL> (oid:45) */
-"URL" = "URL";
+/* Class = "NSTextFieldCell"; title = "URL:"; ObjectID = "110"; */
+"110.title" = "URL:";
 
-/* NSTextField (URL:) : <title:URL:> (oid:97) */
-"URL:" = "URL:";
+/* Class = "NSButtonCell"; title = "Зберегти"; ObjectID = "111"; */
+"111.title" = "Зберегти";
 
+/* Class = "NSButtonCell"; title = "Скасувати"; ObjectID = "112"; */
+"112.title" = "Скасувати";
+
+/* Class = "NSTextFieldCell"; title = "Редагування підписки"; ObjectID = "114"; */
+"114.title" = "Редагування підписки";
+
+/* Class = "NSButtonCell"; title = "Subscribe in Open Reader"; ObjectID = "116"; */
+"116.title" = "Subscribe in Open Reader";
